--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -109,44 +109,33 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="左声道"
-            android:onClick="left"/>
+            android:text="变速"
+            android:onClick="speed"/>
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="右声道"
-            android:onClick="right"/>
+            android:text="变调"
+            android:onClick="pitch"/>
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="立体声"
-            android:onClick="center"/>
-        <LinearLayout
-            android:layout_width="match_parent"
+            android:text="正常"
+            android:onClick="normal"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginTop="10dp">
+        <Button
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginTop="10dp">
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="变速"
-                android:onClick="speed"/>
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="变调"
-                android:onClick="pitch"/>
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="正常"
-                android:onClick="normal"/>
-        </LinearLayout>
+            android:layout_weight="1"
+            android:text="录制"
+            android:onClick="record"/>
     </LinearLayout>
 
 </LinearLayout>
